
add_subdirectory( plastik ) 
add_subdirectory( b2 ) 
add_subdirectory( kde2 ) 
add_subdirectory( keramik ) 
message(STATUS "TODO - remove kdefx usage in laptop")
#add_subdirectory( laptop ) 
message(STATUS "TODO - remove kdefx usage in modernsystem")
#add_subdirectory( modernsystem ) 
add_subdirectory( oxygen ) 
add_subdirectory( quartz ) 
message(STATUS "TODO - remove kdefx usage in redmond")
#add_subdirectory( redmond ) 
add_subdirectory( web ) 
